ver 0.35 - Fixed colors for Dark Mode.

--- a/src/app/contacts/contacts.component.css
+++ b/src/app/contacts/contacts.component.css
@@ -1,4 +1,5 @@
 .footer_area {
+  color: var(--colorText);
   display: flex;
   flex-direction: column;
   align-items: center;
