--- a/src/app/hobbies/hobbies.component.css
+++ b/src/app/hobbies/hobbies.component.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   margin: auto;
   padding: 24px;
-  background-color: rgba(0, 255, 0, 0.05);
+
   box-shadow: 5px 5px 0 0 var(--colorShadow);
   border: solid 2px var(--colorBorder);
 }
